@@ -7,8 +7,8 @@
          .i.))))
 
 (defmacro %%make-object (&rest props)
-  `(%%%make-object ,@(mapcan [list (list-string (camel-notation (string-list (? (symbol? _.)
-                                                                                (symbol-name _.)
-                                                                                _.))))
+  `(%%%make-object ,@(mapcan [list (? (symbol? _.)
+                                      (list-string (camel-notation (string-list (symbol-name _.))))
+                                      _.)
                                    ._.]
                              (group props 2))))
