@@ -1,6 +1,8 @@
 Changes relative to tre-0.13:
   * Don't miss functions that need to get imported from the host
     environment anymore.
+  * Only convert keywords that are keys in literal JSON objects
+    to camel notation, not literal strings.
 
 Changes of tre-0.13 relative to tre-0.12:
   * REMOVE-PROPERTY: New, non-destructive function.
